--- a/doc/reference/gsasl-docs.tmpl
+++ b/doc/reference/gsasl-docs.tmpl
@@ -16,19 +16,20 @@ used by network servers (e.g., IMAP, SMTP) to request authentication
 from clients, and in clients to authenticate against servers.
     </para>
     <para>
-GNU SASL contains a library (`libgsasl'), a command line utility
+GNU SASL contains of a library (`libgsasl'), a command line utility
 (`gsasl') to access the library from the shell, and a manual.  The
-library includes support for the SASL framework (with authentication
+library includes support for the framework (with authentication
 functions and application data privacy and integrity functions) and at
 least partial support for the CRAM-MD5, EXTERNAL, GSSAPI, ANONYMOUS,
-PLAIN, SECURID, DIGEST-MD5, LOGIN, NTLM and KERBEROS_V5 mechanisms.
+PLAIN, SECURID, DIGEST-MD5, LOGIN, NTLM mechanisms.
     </para>
     <para>
-The library is portable because it does not do network communication
-by itself, but rather leaves it up to the calling application.  The
-library is flexible with regards to the authorization infrastructure
-used, as it utilizes callbacks into the application to decide whether
-an user is authorized or not.
+The library is easily ported because it does not do network
+communication by itself, but rather leaves it up to the calling
+application.  The library is flexible with regards to the
+authorization infrastructure used, as it utilizes callbacks into the
+application to decide whether a user is authorized or not.  GNU SASL
+has been ported to many Unix flavors.
     </para>
     <para>
 GNU SASL is developed for the GNU/Linux system, but runs on over 20
@@ -36,7 +37,7 @@ platforms including most major Unix platforms and Windows, and many
 kind of devices including iPAQ handhelds and S/390 mainframes.
     </para>
     <para>
-GNU SASL is licensed under the GNU Public License.
+GNU SASL is licensed under the GNU General Public License.
     </para>
 
     &gsasl-gsasl;
