--- a/doc/reference/gsasl-docs.tmpl
+++ b/doc/reference/gsasl-docs.tmpl
@@ -1,5 +1,6 @@
 <!doctype book PUBLIC "-//Davenport//DTD DocBook V3.0//EN" [
 <!ENTITY gsasl-gsasl SYSTEM "gsasl.sgml">
+<!ENTITY gsasl-gsasl-mech SYSTEM "gsasl-mech.sgml">
 <!ENTITY gsasl-gsasl-compat SYSTEM "gsasl-compat.sgml">
 ]>
 <book id="index">
@@ -42,6 +43,7 @@ GNU SASL is licensed under the GNU General Public License.
     </para>
 
     &gsasl-gsasl;
+    &gsasl-gsasl-mech;
     &gsasl-gsasl-compat;
   </chapter>
 </book>
