--- a/doc/reference/gsasl-docs.tmpl
+++ b/doc/reference/gsasl-docs.tmpl
@@ -18,20 +18,19 @@ used by network servers (e.g., IMAP, SMTP) to request authentication
 from clients, and in clients to authenticate against servers.
     </para>
     <para>
-GNU SASL contains of a library (`libgsasl'), a command line utility
+GNU SASL consists of a library (`libgsasl'), a command line utility
 (`gsasl') to access the library from the shell, and a manual.  The
 library includes support for the framework (with authentication
 functions and application data privacy and integrity functions) and at
 least partial support for the CRAM-MD5, EXTERNAL, GSSAPI, ANONYMOUS,
-PLAIN, SECURID, DIGEST-MD5, LOGIN, NTLM mechanisms.
+PLAIN, SECURID, DIGEST-MD5, LOGIN, and NTLM mechanisms.
     </para>
     <para>
 The library is easily ported because it does not do network
 communication by itself, but rather leaves it up to the calling
 application.  The library is flexible with regards to the
-authorization infrastructure used, as it utilizes callbacks into the
-application to decide whether a user is authorized or not.  GNU SASL
-has been ported to many Unix flavors.
+authorization infrastructure used, as it utilize a callback into the
+application to decide whether a user is authorized or not.
     </para>
     <para>
 GNU SASL is developed for the GNU/Linux system, but runs on over 20
@@ -39,7 +38,19 @@ platforms including most major Unix platforms and Windows, and many
 kind of devices including iPAQ handhelds and S/390 mainframes.
     </para>
     <para>
-GNU SASL is licensed under the GNU General Public License.
+GNU SASL is written in pure ANSI C89 to be portable to embedded and
+otherwise limited platforms.  The entire library, with full support
+for ANONYMOUS, EXTERNAL, PLAIN, LOGIN and CRAM-MD5, and the front-end
+that support client and server mode, and the IMAP and SMTP protocols,
+fits in under 60kb on an Intel x86 platform, without any modifications
+to the code.  (This figure was accurate as of version 0.0.13.)
+    </para>
+    <para>
+The library is licensed under the GNU Lesser General Public License
+version 2.1.  The command-line application (src/), examples
+(examples/), self-test suite (tests/) are licensed under the GNU
+General Public License license version 3.0.  The documentation (doc/)
+is licensed under the GNU Free Documentation License version 1.2.
     </para>
 
     &gsasl-gsasl;
